[gd_scene load_steps=2 format=3 uid="uid://bfdyj67abefu5"]

[ext_resource type="Script" path="res://PlayerSelect.gd" id="1_8jvtb"]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("1_8jvtb")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1

[node name="PlayerIdLabel" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Session ID: 12380794"

[node name="PlayerNameEdit" type="LineEdit" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color: "

[node name="PlayerColorPicker" type="ColorPickerButton" parent="UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Join game"
